--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "main": "server.js",
   "repository": "",
   "author": "ja_rascal",
+  "engines": {
+    "node": "0.12.14",
+    "npm":  "2.15.1"
+  }
   "dependencies": {
     "express": "~3.2.4",
     "socket.io": "~1.4.6"
