--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
   "author": "ja_rascal",
   "engines": {
     "node": "0.12.14",
-    "npm":  "2.15.1"
+    "npm": "2.15.1"
   },
   "dependencies": {
+    "async": "^2.0.0-rc.6",
     "express": "~3.2.4",
     "socket.io": "~1.4.6"
+  },
+  "devDependencies": {
+    "async": "^2.0.0-rc.6"
   }
 }
